Fixing crasher bug 105670. Adding null check on incoming server in the process of getting default account. r=racham, sr=sspitzer